[package]
name = "rust-ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "lazy"
path = "src/lazy_segment_tree.rs"

[[bin]]
name = "fract_casc"
path = "src/fract_casc.rs"
